--- a/Rental.API/appsettings.json
+++ b/Rental.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Database": {
     "ConnectionStrings": {
-      "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Rental.db;Integrated Security=True"
+      "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Rental;Integrated Security=True"
     }
   },
   "Logging": {
